# c-practice

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  add.c  div.c  mul.c  rwlock.c  sem.c
calc/: Makefile  main.c  sub.c
hello/: CMakeLists.txt  main.cc
include/: calc.h
multi-thread/: condition.c  counter.c  sem.c  thread_info.c
simple-threadpool-c/: CMakeLists.txt  Makefile.bak  main.c  threadpool.c  threadpool.h
simple-threadpool-cpp/: CMakeLists.txt  TaskQueue.cpp  TaskQueue.h  ThreadPool.cpp  ThreadPool.h  main.cpp
socket/: CMakeLists.txt  client.c  main.cpp  server.c
src/calc/: Makefile  add.c  div.c  main.c  mul.c  sub.c
src/include/: calc.h
src/multi-thread/: counter.c  mutex.cc  thread_info.c
unix-file-io-test/: CMakeLists.txt  abc.txt  defg.txt  dup.c  dup2.c  main.c  open-close.c
