cmake_minimum_required(VERSION 3.22.1)

project(c-practice CXX C)
SET(CXX_STANDARD C++17)
SET(C_STANDARD C17)
SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

# # To mix using LLVM from homebrew with MacOS system header and libs, enable following and choose llvm compiler while configure
# # SET(CMAKE_PREFIX_PATH /opt/homebrew/opt/llvm/lib/cmake/)
# # SET(LLVM_DIR /opt/homebrew/opt/llvm/lib/cmake/llvm)
# find_package(LLVM REQUIRED CONFIG)
# message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
# message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
# message(STATUS "Using LLVM_TOOLS_BINARY_DIR: ${LLVM_TOOLS_BINARY_DIR}")
# message(STATUS "Using LLVM_INCLUDE_DIRS: ${LLVM_INCLUDE_DIRS}")
# message(STATUS "Using LLVM_DEFINITIONS: ${LLVM_DEFINITIONS}")
# # list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
# # message(STATUS "Using CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
# separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
# # add_definitions(${LLVM_DEFINITIONS_LIST}) # superseded (https://cmake.org/cmake/help/latest/command/add_definitions.html)
# add_compile_definitions(${LLVM_DEFINITIONS})
# include_directories(${LLVM_INCLUDE_DIRS})
# # add_compile_options()

add_subdirectory(hello)
add_subdirectory(simple-threadpool-cpp)
add_subdirectory(unix-file-io-test)
add_subdirectory(socket)